--- a/index.html
+++ b/index.html
@@ -17,40 +17,41 @@
         <div class="header-container">
             <span class="name"><img class="profile-picture" src="images/michael.webp" alt="Michael" width="100">
                 Michael Anderson</span>
+            <a id="menu" href="#"></a>
+            <div>
+                <nav>
+                    <ul class="navigation">
+                        <li><a href="#" class="active" title="Home">Home</a></li>
+                        <li><a href="#" title="Chamber">Chamber</a></li>
+                        <li><a href="#" title="GitHub Profile">GitHub Profile</a></li>
+                        <li><a href="#" title="LinkiedIn">LinkedIn</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <a id="menu" href="#"></a>
-        <div>
-            <nav>
-                <ul class="navigation">
-                    <li><a href="#" class="active" title="Home">Home</a></li>
-                    <li><a href="#" title="Chamber">Chamber</a></li>
-                    <li><a href="#" title="GitHub Profile">GitHub Profile</a></li>
-                    <li><a href="#" title="LinkiedIn">LinkedIn</a></li>
-                </ul>
-            </nav>
-        </div>
+
     </header>
     <main>
         <!-- Coursework/Place Container -->
         <h1>Home</h1>
         <div class="container-1">
-            <div class="coursework">
-                <h3>Course Work</h3>
+            <section class="coursework">
+                <h2>Course Work</h2>
                 <ul>
                     <li></li>
                     <li></li>
                     <li></li>
                 </ul>
-            </div>
-            <div class="place">
-                <h3>Utah, USA</h3>
-            </div>
+            </section>
+            <section class="place">
+                <h2>Utah, USA</h2>
+            </section>
         </div>
         <!-- Computer Programming Certificate Container -->
         <div class="container-2">
-            <h3>Web and Computer Programming Certificate</h3>
+            <h2>Web and Computer Programming Certificate</h2>
             <!-- Filters spot -->
-            <div class="classes"></div>
+            <section class="classes"></section>
         </div>
     </main>
 
