--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
             </section>
         </div>
         <!-- Computer Programming Certificate Container -->
-        <div class="container-2">
+        <section class="container-2">
             <h2>Web and Computer Programming Certificate</h2>
-            <!-- Filters spot -->
-            <section class="classes"></section>
-        </div>
+            <div class="filters-container">
+                <div class="subjects">
+                    <h3 id="all">All</h3>
+                    <h3 id="cse">CSE</h3>
+                    <h3 id="wdd">WDD</h3>
+                </div>
+                <p class="credits-display" id="credits"></p>
+            </div>
+            <div class="classes">
+
+            </div>
+        </section>
     </main>
 
     <footer>
