--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="description" content="Home Page for Michael Anderson - WDD 231 - Web Frontend Development I">
     <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231 - Web Frontend Development I - Michael Anderson</title>
+    <title>WDD 231 - Web Frontend Development I - Michael Anderson - Home Page</title>
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="WDD 231 - Webfront Development - Michael Anderson">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/images/thumbnail.webp">
+    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/index.html"
     <link rel="stylesheet" href="styles/index.css">
     <script defer src="scripts/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
