--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta property="og:title" content="WDD 231 - Webfront Development - Michael Anderson">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/images/thumbnail.webp">
-    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/index.html"
+    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/index.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <!--Styles and Script Links-->
     <link rel="stylesheet" href="styles/index.css">
     <script defer src="scripts/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
