--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="title-container">
-            <!-- Insert Image -->
+            <img class="flag" src="images/flag.webp" alt="flag" width="100">
             <h1>Brigham City</h1>
             <h2 class="subtitle">Chamber of Commerce</h2>
         </div>
