--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,9 +11,8 @@
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Directory - Michael Anderson">
     <meta property="og:type" content="website">
-    <!-- ---------------------------------------------------------------------------------------------------------------Change these!!!!!-->
-    <!-- <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/images/thumbnail.webp"> 
-    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/index.html"> -->
+    <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/chamber/images/thumbnail.webp">
+    <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/chamber/directory.html">
     <meta name="twitter:card" content="summary_large_image">
     <!--Styles and Script Links-->
     <link rel="stylesheet" href="styles/normalize.css">
@@ -23,25 +22,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Kanit:wght@100;300;400&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
     <header>
-        <div class="title-container">
-            <img class="flag" src="images/flag.webp" alt="flag" width="100">
-            <h1>Brigham City</h1>
-            <h2 class="subtitle">Chamber of Commerce</h2>
-        </div>
-        <a id="menu" href="#"></a>
-        <div class="navbar">
-            <nav>
-                <ul class="navigation">
-                    <li><a href="#" title="Home">Home</a></li>
-                    <li><a href="#" title="Directory">Directory</a></li>
-                    <li><a href="#" title="Join">Join</a></li>
-                    <li><a href="#" title="Discover">Discover</a></li>
-                </ul>
-            </nav>
+        <div class="header-container">
+            <div class="title-container">
+                <img class="flag" src="images/flag.webp" alt="flag" width="100">
+                <h1>Brigham City</h1>
+                <h2 class="subtitle">Chamber of Commerce</h2>
+            </div>
+            <a id="menu" href="#"></a>
+            <div class="navbar">
+                <nav>
+                    <ul class="navigation">
+                        <li><a href="#" title="Home">Home</a></li>
+                        <li><a href="#" class="active" title="Directory">Directory</a></li>
+                        <li><a href="#" title="Join">Join</a></li>
+                        <li><a href="#" title="Discover">Discover</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -50,7 +52,7 @@
     </main>
 
     <footer>
-        <div class="contact-container">
+        <div class="footer-container">
             <h3>Brigham City Chamber of Commerce</H3>
             <p class="contact-info">10 S Main Steet</p>
             <p class="contact-info">Brigham City, UT 84302</p>
@@ -58,14 +60,24 @@
             <p class="contact-info">info@brighamccinfo.org</p>
             <p class="contact-info">(435) 723-3741</p>
         </div>
-        <div class="media-container">
-
+        <div class="footer-container">
+            <nav class="social-links">
+                <a href="https://facebook.com">
+                    <img src="images/facbook_symbol.webp" alt="Facebook" width="50">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/x_twitter.webp" alt="X (Formerly Twitter)" width="50">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram_icon.webp" alt="Instagram" width="50">
+                </a>
+            </nav>
         </div>
         <div class="footer-container">
             <p class="foot-text">WDD231 Class Project</p>
             <p class="foot-text">Michael Anderson</p>
             <p class="foot-text">© <span id="copyright-year"></span> Brigham City Chamber of Commerce
-                <img class="flag" src="images/flag.webp" alt="flag" width="45">
+                <img class="flag-footer" src="images/flag.webp" alt="flag" width="45">
             </p>
             <p id="lastModified">Last Modified: </p>
         </div>
