--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,7 +48,12 @@
     </header>
 
     <main>
-        <div id="business-cards"></div>
+        <div class="menu">
+            <button id="grid">⏹️Grid</button>
+            <button id="list">📄List</button>
+        </div>
+        <hr>
+        <article class="grid" id="business-cards"></article>
     </main>
 
     <footer>
