--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WDD 231 Chamber of Commerce Project - Directory Page">
     <meta name="keywords" content="Directory, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231</title>
+    <title>WDD 231- Brigham City Chamber of Commerce</title>
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Directory - Michael Anderson">
     <meta property="og:type" content="website">
@@ -29,18 +29,18 @@
     <header>
         <div class="header-container">
             <div class="title-container">
-                <img class="flag" src="images/flag.webp" alt="flag" width="100">
                 <h1>Brigham City</h1>
                 <h2 class="subtitle">Chamber of Commerce</h2>
+                <img class="flag" src="images/flag.webp" alt="flag" width="100">
             </div>
             <a id="menu" href="#"></a>
             <div class="navbar">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#" title="Home">Home</a></li>
+                        <li><a href="#" title="home">Home</a></li>
                         <li><a href="#" class="active" title="Directory">Directory</a></li>
-                        <li><a href="#" title="Join">Join</a></li>
-                        <li><a href="#" title="Discover">Discover</a></li>
+                        <li><a href="#" title="join">Join</a></li>
+                        <li><a href="#" title="discover">Discover</a></li>
                     </ul>
                 </nav>
             </div>
