--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,7 +37,7 @@
             <div class="navbar">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#" title="home">Home</a></li>
+                        <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="#" class="active" title="Directory">Directory</a></li>
                         <li><a href="#" title="join">Join</a></li>
                         <li><a href="#" title="discover">Discover</a></li>
