--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
         rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <!--Script Links-->
-    <script defer src="scripts/directory.js"></script>
+    <script defer src="scripts/index.js"></script>
     <script defer src="scripts/weather.js"></script>
 
 </head>
@@ -65,6 +65,7 @@
                 <h6>Weather Forecast</h6>
             </section>
         </div>
+        <div class="rand-store" id="business-cards"></div>
     </main>
 
     <footer>
