--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,12 +60,19 @@
             </section>
             <section class="current-weather">
                 <h6>Current Weather</h6>
+                <div id="weather-icon"></div>
+                <div id="current-weather">
+                    <!-- weather data -->
+                </div>
             </section>
             <section class="weather-forcast">
                 <h6>Weather Forecast</h6>
             </section>
         </div>
-        <div class="rand-store" id="business-cards"></div>
+        <div class="weather-container">
+            <div class="rand-store" id="business-cards"></div>
+        </div>
+
     </main>
 
     <footer>
