--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,7 +60,7 @@
             </section>
             <section class="current-weather">
                 <h6>Current Weather</h6>
-                <div id="weather-icon"></div>
+                <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="100">
                 <div id="current-weather">
                     <!-- weather data -->
                 </div>
