--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,19 +60,20 @@
             </section>
             <section class="current-weather">
                 <h6>Current Weather</h6>
-                <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="100">
-                <div id="current-weather">
-                    <!-- weather data -->
+                <div class="weather-container">
+                    <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
+                    <div id="current-weather">
+                        <!-- weather data -->
+                    </div>
                 </div>
             </section>
             <section class="weather-forcast">
                 <h6>Weather Forecast</h6>
             </section>
         </div>
-        <div class="weather-container">
-            <div class="rand-store" id="business-cards"></div>
+        <div class="rand-store" id="business-cards">
+            <!-- business data -->
         </div>
-
     </main>
 
     <footer>
