--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,6 +25,7 @@
     <!--Script Links-->
     <script defer src="scripts/index.js"></script>
     <script defer src="scripts/weather.js"></script>
+    <script defer src="scripts/forecast.js"></script>
 
 </head>
 
