checking errors for auditing tool not working on W03 and W02 when working prior

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 231 Chamber of Commerce Project - Directory Page">
-    <meta name="keywords" content="Directory, Michael, Anderson, WDD 231, Web Frontend Development I">
+    <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
+    <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
     <title>WDD 231- Brigham City Chamber of Commerce</title>
     <!-- Social Media Meta Tags -->
-    <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Directory - Michael Anderson">
+    <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Home - Michael Anderson">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://mkanderson2024.github.io/wdd231/chamber/images/thumbnail.webp">
     <meta property="og:url" content="https://mkanderson2024.github.io/wdd231/chamber/directory.html">
