--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
     <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231- Brigham City Chamber of Commerce</title>
+    <title>WDD 231- Brigham City</title>
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Home - Michael Anderson">
     <meta property="og:type" content="website">
