--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WDD 231 Chamber of Commerce Project - Home Page">
     <meta name="keywords" content="Home, Michael, Anderson, WDD 231, Web Frontend Development I">
     <meta name="author" content="Michael Anderson">
-    <title>WDD 231- Brigham City</title>
+    <title>WDD 231- Brigham City Chamber of Commerce</title>
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="WDD 231 - Chamber of Commerce Project - Home - Michael Anderson">
     <meta property="og:type" content="website">
@@ -33,8 +33,8 @@
     <header>
         <div class="header-container">
             <div class="title-container">
-                <h1>Brigham City</h1>
-                <h2 class="subtitle">Chamber of Commerce</h2>
+                <h1>Brigham City<h2 class="subtitle">Chamber of Commerce</h2>
+                </h1>
                 <img class="flag" src="images/flag.webp" alt="flag" width="100">
             </div>
             <a id="menu" href="#"></a>
