--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,8 +33,8 @@
     <header>
         <div class="header-container">
             <div class="title-container">
-                <h1>Brigham City<h2 class="subtitle">Chamber of Commerce</h2>
-                </h1>
+                <h1>Brigham City</h1>
+                <h2 class="subtitle">Chamber of Commerce</h2>
                 <img class="flag" src="images/flag.webp" alt="flag" width="100">
             </div>
             <a id="menu" href="#"></a>
