--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,6 +54,8 @@
     <main>
         <div class="hero-container"><img class="hero" src="images/hero.webp" alt="brigham city court house"
                 width="1920">
+            <ul class="navigation"></ul>
+            <li><a href="#" title="call to action">Claim your Free Dinner</a></li>
         </div>
         <div class="home-info">
             <section class="events">
