--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
                     <ul class="navigation">
                         <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="#" class="active" title="Directory">Directory</a></li>
-                        <li><a href="#" title="join">Join</a></li>
+                        <li><a href="join.html" title="join">Join</a></li>
                         <li><a href="#" title="discover">Discover</a></li>
                     </ul>
                 </nav>
