--- a/chamber/join.html
+++ b/chamber/join.html
@@ -17,16 +17,14 @@
     <!--Styles Links-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/directory.css">
+    <link rel="stylesheet" href="styles/application.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Kanit:wght@100;300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <!--Script Links-->
-    <script defer src="scripts/index.js"></script>
-    <script defer src="scripts/weather.js"></script>
-    <script defer src="scripts/forecast.js"></script>
-
+    <script defer src="scripts/footer.js"></script>
 </head>
 
 <body>
@@ -41,9 +39,9 @@
             <div class="navbar">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#" class="active" title="home">Home</a></li>
+                        <li><a href="index.html" title="home">Home</a></li>
                         <li><a href="directory.html" title="Directory">Directory</a></li>
-                        <li><a href="join.html" title="join">Join</a></li>
+                        <li><a href="#" class="active" title="join">Join</a></li>
                         <li><a href="#" title="discover">Discover</a></li>
                     </ul>
                 </nav>
@@ -52,32 +50,55 @@
     </header>
 
     <main>
-        <div class="hero-container"><img class="hero" src="images/hero.webp" alt="brigham city court house"
-                width="1920">
-            <ul class="navigation"></ul>
-            <li><a href="#" title="call to action">Claim your Free Dinner</a></li>
-        </div>
-        <div class="home-info">
-            <section class="events">
-                <h6>Events</h6>
-            </section>
-            <section class="current-weather">
-                <h6>Current Weather</h6>
-                <div class="weather-container">
-                    <img class="weather-icon" id="weather-icon" src="#" alt="weather icon" width="75">
-                    <div id="current-weather">
-                        <!-- weather data -->
-                    </div>
-                </div>
-            </section>
-            <section class="weather-forcast">
-                <h6>Weather Forecast</h6>
-                <div id="forecast-weather"></div>
-            </section>
-        </div>
-        <div class="rand-store" id="business-cards">
-            <!-- business data -->
-        </div>
+        <h1>Membership Application</h1>
+        <form method="get" action="thankyou.html" class="application">
+            <!-- Name-->
+            <fieldset>
+                <legend>Name and Title</legend>
+                <label for="first-name">First Name: <input type="text" required id="first-name" name="first-name"
+                        autocomplete="given-name" title="Enter first name here" placeholder="John">
+                </label>
+
+                <label for="last-name">Last Name: <input type="text" required id="last-name" name="last-name"
+                        autocomplete="family-name" title="Enter last name here" placeholder="Doe">
+                </label>
+
+                <label for="organization-title">Oranization Title: <input type="text" id="organization-title"
+                        autocomplete="organization-title" name="organization-title"
+                        title="Enter organization title here" placeholder="Owner">
+                </label>
+            </fieldset>
+            <!-- Contact -->
+            <fieldset>
+                <legend>Contact Info</legend>
+                <label for="email">Email: <input type="email" id="email" name="email" autocmplete="email"
+                        title="enter email address here" placeholder="example@gmail.com">
+                </label>
+
+                <label for="mobile-number">Mobile Number: <input type="tel" id="mobile-number" name="mobile-number"
+                        autocomplete="tel"></label>
+            </fieldset>
+            <!-- Business -->
+            <fieldset>
+                <legend>* Business / Organization Name</legend>
+                <label for="business-organization-name">Name: <input type="text" id="business-organization-name"
+                        autocomplete="organization" name="business-organization-name"></label>
+            </fieldset>
+            <fieldset>
+                <legend>* Membership Level</legend>
+                <label for="nonprofit"><input type="radio" id="nonprofit" name="nonprofit" value="nonprofit"
+                        required>Non Profit</label>
+                <label for="bronze"><input type="radio" id="bronze" name="bronze" value="bronze" required>Bronze</label>
+                <label for="silver"><input type="radio" id="silver" name="silver" value="silver" required>Silver</label>
+                <label for="gold"><input type="radio" id="gold" name="gold" value="gold" required>Gold</label>
+            </fieldset>
+            <fieldset>
+                <legend>Business/Organization Description</legend>
+                <label for="description"><textarea id="description" name="description" rows="6"
+                        cols="50">Enter Description Here</textarea></label>
+            </fieldset>
+            <label for="submit"><input type="submit" id="submit" value="Send Application"></label>
+        </form>
     </main>
 
     <footer>
