--- a/chamber/join.html
+++ b/chamber/join.html
@@ -65,24 +65,25 @@
 
                 <label for="organization-title">Oranization Title: <input type="text" id="organization-title"
                         autocomplete="organization-title" name="organization-title"
-                        title="Enter organization title here" placeholder="Owner">
+                        title="Enter organization title here" placeholder="Owner" pattern="^[A-Za-z0-9\- ]{7,}$">
                 </label>
             </fieldset>
             <!-- Contact -->
             <fieldset>
                 <legend>Contact Info</legend>
-                <label for="email">Email: <input type="email" id="email" name="email" autocmplete="email"
+                <label for="email">Email: <input type="email" required id="email" name="email" autocomplete="email"
                         title="enter email address here" placeholder="example@gmail.com">
                 </label>
 
-                <label for="mobile-number">Mobile Number: <input type="tel" id="mobile-number" name="mobile-number"
-                        autocomplete="tel"></label>
+                <label for="mobile-number">Mobile Number: <input type="tel" required id="mobile-number"
+                        name="mobile-number" autocomplete="tel"></label>
             </fieldset>
             <!-- Business -->
             <fieldset>
                 <legend>* Business / Organization Name</legend>
-                <label for="business-organization-name">Name: <input type="text" id="business-organization-name"
-                        autocomplete="organization" name="business-organization-name"></label>
+                <label for="business-organization-name">Name: <input type="text" required
+                        id="business-organization-name" autocomplete="organization"
+                        name="business-organization-name"></label>
             </fieldset>
             <fieldset>
                 <legend>* Membership Level</legend>
@@ -94,8 +95,8 @@
             </fieldset>
             <fieldset>
                 <legend>Business/Organization Description</legend>
-                <label for="description"><textarea id="description" name="description" rows="6"
-                        cols="50">Enter Description Here</textarea></label>
+                <label for="description"><textarea id="description" name="description" rows="6" cols="50"
+                        title="Describe your business or organization here">Enter Description Here</textarea></label>
             </fieldset>
             <label for="submit"><input type="submit" id="submit" value="Send Application"></label>
         </form>
